--- a/CLIENT/src/App.css
+++ b/CLIENT/src/App.css
@@ -3,9 +3,15 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background-color: rgb(18, 11, 11); */
-  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
+  /* position: relative; */
   overflow-x: hidden;
+}
+ 
+:root{
+  --first-color: rgb(23, 94, 157);
+  --second-color: rgb(213, 236, 252);
+  --text-color:hsl(250, 8%, 45%);
 }
 
 #root {
@@ -14,8 +20,31 @@ body {
   box-sizing: border-box;
 }
 
+
+.link-btn {
+  text-decoration: none;
+  background-color: var(--first-color);
+  color: white;
+  border: none;
+  padding: .5rem 1.25rem;
+  font-size: 1.3rem;
+  border-radius: .5rem;
+  cursor: pointer;
+}
+
+
+.submit-btn {
+  background-color: var(--first-color);
+  color: #ffffff;
+  border: none;
+  padding: .5rem .75rem;
+  border-radius: .5rem;
+  font-size: 1.3rem;
+  margin: .5rem;
+}
+
 .navbar {
-  background-color: black;
+  background-color: var(--second-color);
   margin-top: -1.25rem;
   height: 100px;
   padding: 0rem 3rem 0 3rem;
@@ -24,16 +53,24 @@ body {
   align-items: center;
   position: sticky;
   top: 0;
-  /* left: 0; */
   z-index: 1000;
 }
 
-.navbar .logo a {
+.navbar .logo{
   text-decoration: none;
-  color: #388087;
+  color: var(--first-color);
   font-size: 1.75rem;
 }
-
+.nav-menu{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.auth-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .nav-menu ul {
   display: flex;
   height: 100%;
@@ -44,19 +81,51 @@ body {
   list-style: none;
 }
 
-.nav-menu ul li a {
+.nav-link {
   text-decoration: none;
-  margin-left: 1.75rem;
   font-size: 1.35rem;
   font-weight: 600;
-  color: #388087;
+  color: var(--first-color);
+  margin-left: 1rem;
+}
+
+.hovering{
+    border-bottom: 4px solid var(--first-color);
+    color: var(--first-color);
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-size: 1.35rem;
+    font-weight: 600;
+    margin-left: 1rem;
+
 }
 
 .toggle-btn {
-  color: #388087;
+  color: var(--first-color);
   font-size: 2rem;
   display: none;
 }
+
+.account{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.user-account{
+  background-color: #ffffff;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+}
+.user-icon{
+  font-size: 1.5rem;
+  color: var(--first-color);
+}
+
 
 /* ======================== */
 
@@ -64,7 +133,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #388087;
+  /* background-color: #388087; */
   height: 100%;
   width: 100%;
   /* padding: 0rem 2rem; */
@@ -72,7 +141,7 @@ body {
 
 .home-container .heading {
   font-size: 1.75rem;
-  color: aliceblue;
+  color: var(--first-color);
   padding-top: 1.5rem;
 
 }
@@ -142,7 +211,7 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  /* background-color: blue; */
+
 
 }
 
@@ -220,8 +289,7 @@ body {
 .home-container .explore-btn {
   width: 150px;
   height: 50px;
-  border: 1px solid aliceblue;
-  background-color: aliceblue;
+  background-color: var(--first-color);
   border-radius: 1rem;
   display: flex;
   justify-content: center;
@@ -231,7 +299,7 @@ body {
 
 .home-container a {
   text-decoration: none;
-  color: #388087;
+  color: #ffffff;
   font-size: 1.7rem;
 }
 
@@ -331,6 +399,9 @@ footer .social-media i {
   margin-right: .75rem;
 }
 
+
+/* =========Boking page============ */
+
 #booking-page{
   height: 100vh;
   text-align: center;
@@ -379,7 +450,7 @@ footer .social-media i {
 
 .outer-container {
   padding: .5rem;
-  border: 2px solid rgb(213, 236, 252);
+  border: 3px solid var(--second-color);
   border-radius: 2.5rem;
   margin-bottom: 2rem;
 }
@@ -387,7 +458,7 @@ footer .social-media i {
 .vehicle-container {
   height: 450px;
   width: 350px;
-  background-color: rgb(235, 245, 252);
+  background-color: var(--second-color);
   border-radius: 2.5rem;
   padding: 1rem;
   display: flex;
@@ -409,7 +480,10 @@ footer .social-media i {
 
 .vehicle-details {
   text-align: center;
-  color: #388087;
+  color: black;
+}
+.vehicle-details i{
+  color: var(--first-color);
 }
 
 .vehicle-details p {
@@ -483,10 +557,10 @@ footer .social-media i {
   margin-right: 2rem;
   text-align: left;
   font-size: 1.2rem;
-  color: rgb(65, 62, 62);
+  color: var(--text-color);
 
   h1 {
-    color: #388087;
+    color: var(--first-color);
     font-size: 2rem;
   }
 }
@@ -510,13 +584,12 @@ footer .social-media i {
 
 .about-advantages h1 {
   font-size: 2rem;
-  color: #388087;
+  color: var(--first-color);
 }
 
 .about-advantages .advantages {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   gap: 1rem;
 }
 
@@ -527,15 +600,17 @@ footer .social-media i {
   align-items: center;
   width: 250px;
   height: 220px;
-  border: 1px solid #388087;
+  border: 2px solid var(--first-color);
   border-radius: 2rem;
   text-align: center;
   padding: 1rem;
 
 }
-
+.about-advantages .advantages .advantage p{
+  color: var(--text-color);
+}
 .about-advantages .advantages .advantage h2 {
-  color: #388087;
+  color: var(--first-color);
 }
 
 /* ==========Terms & Conditions=========== */
@@ -545,30 +620,32 @@ footer .social-media i {
 
 .terms-conditions .tm-heading {
   text-align: center;
-  color: #388087;
+  color: var(--first-color);
   font-size: 2rem;
 }
 
 /* =========contact page========== */
 .contact-page {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding-top: 2rem;
+  padding: 0rem 2rem;
+
 
   h1 {
-    margin: 0;
+    font-size: 2rem;
+    margin: 3rem 0 0 0;
+    color: var(--first-color);
   }
 }
 
 .contact-form {
-  width: 400px;
-  height: 450px;
-  border: 1px solid #388087;
+  width: 50%;
+  background-color: #e6e9ee;
   border-radius: .5rem;
-  padding: 1rem;
-  margin-bottom: 2rem;
+  padding: 2rem 1rem;
 }
 
 .input-fields {
@@ -580,68 +657,93 @@ footer .social-media i {
 }
 
 .input-field {
-  height: 30px;
-  border: 1px solid #388087;
+  height: 50px;
+  border: none;
   border-radius: .5rem;
   padding: 0 0 0 1rem;
+  background-color: white;
   outline: 0;
-  color: #388087;
+  color: var(--first-color);
   font-size: 1.3rem;
+}
+.input-fields label{
+  color: var(--first-color);
+  font-size: 1.25rem;
 }
 
 .input-fields textarea {
-  border: 1px solid #388087;
+  border: 1px solid var(--first-color);
   border-radius: .5rem;
-  padding: 0 0 0 1rem;
+  padding: .75rem;
   outline: 0;
-  color: #388087;
+  color: var(--first-color);
   font-size: 1rem;
+}
+.input-fields textarea::placeholder{
+  color: var(--first-color);
+  font-size: 1.25rem;
 }
 
 /* =========login page========== */
 .login-page {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding-top: 2rem;
+  padding: 2rem;
+  
 
   h1 {
-    margin: 0 0 1rem 0;
+    color: var(--first-color);
     font-size: 2rem;
   }
 }
 
 .login-form {
-  width: 400px;
-  height: 200px;
-  border: 1px solid #388087;
+  width: 50%;
+  background-color: #e6e9ee;
   border-radius: .5rem;
-  padding: 1rem;
-  margin-bottom: 2rem;
+  padding: 2rem 1rem;
+}
+
+.input-field::placeholder{
+  color: 1.25rem;
+  color: var(--first-color);
+}
+.register-link{
+  text-align: center;
+}
+.register-link .reg-link{
+  text-decoration: none;
+  font-size: 1.25rem;
+}
+.register-link .reg-link:hover{
+  color: var(--first-color);
+  text-decoration: underline;
 }
 
 /* ======register page========== */
 .register-page {
   display: flex;
+  height: 100vh;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  padding-top: 2rem;
+  padding: 2rem;
 
   h1 {
-    margin: 0 0 1rem 0;
+    color: var(--first-color);
     font-size: 2rem;
   }
 }
 
 .register-form {
-  width: 400px;
-  height: 450px;
-  border: 1px solid #388087;
+  width: 50%;
+  background-color: #e6e9ee;
   border-radius: .5rem;
-  padding: 1rem;
-  margin-bottom: 2rem;
+  padding: 2rem 1rem;
+
 }
 
 /* =======admin panel======= */
@@ -766,26 +868,7 @@ thead tr {
 }
 
 
-/* Style links */
-.admin-edit-btn {
-  text-decoration: none;
-  color: #007bff;
-  background-color: rgb(23, 94, 157);
-  color: white;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-}
 
-/* Style delete button */
-button {
-  background-color: rgb(23, 94, 157);
-  color: white;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-}
 
 
 
@@ -823,27 +906,32 @@ button {
   }
 
   .navbar {
-    padding: 2rem 2rem 0 2rem;
-    margin-right: -1rem;
+    padding: 1rem 2rem 0 2rem;
+    height: 70px;
 
   }
-
+  
   .nav-menu ul {
     display: none;
+    position: relative;
+  }
+  .navbar .logo{
+    font: 1rem;
   }
 
   .nav-menu ul.active {
     width: 300px;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(213, 236, 252);
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     align-items: flex-start;
     position: absolute;
     top: 0;
     right: 0;
-    padding: .5rem 0;
+    margin: 0;
+    padding: 0;
   }
 
   .nav-menu ul li {
@@ -858,6 +946,7 @@ button {
 
   .toggle-btn {
     display: block;
+    margin-left: 1.5rem;
   }
 
   footer {
@@ -914,11 +1003,7 @@ button {
     left: 0;
   }
 
-  /* =====Explore page======= */
-    /* #explore{
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-    } */
+
 }
 
 
@@ -932,6 +1017,13 @@ button {
 
 
 @media screen and (max-width : 768px) {
+  .navbar {
+    padding: 1rem .75rem 0 .75rem;
+    height: 70px;
+  }
+  .navbar .logo{
+    font-size: 1.25rem;
+  }
   .home-container {
     height: auto;
   }
@@ -1001,5 +1093,22 @@ button {
   .vehicle-container .vehicle-image {
     height: 45%;
     width: 100%;
+  }
+
+  /* =======contact page======= */
+  .contact-form{
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  /* =======login form======== */
+  .login-form{
+    width: 100%;
+  }
+
+  /* ========register form========= */
+  .register-form{
+    width: 100%;
+
   }
 }
